<resources>
    <string name="app_name">Resources Donor</string>
    <string name="resources_donor_txt">Resources Donor</string>
    <string name="beneficiarioBoton">BENEFICIARIO</string>
    <string name="donadorBoton">DONADOR</string>
    <string name="logo_app_txt">logo de la app</string>
    <string name="registro_donadores_txt">Registro para Donadores</string>
    <string name="volver_text">volver</string>
    <string name="registro_para_beneficiarios_txt">Registro para Beneficiarios</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="password">Constraseña</string>
    <string name="direccion">Dirección</string>
    <string name="direccion_d">Dirección de la Donación</string>
    <string name="login_txt">LOG-IN</string>
    <string name="registrarse_txt">Registrarse</string>
    <string name="volver_principal">volver principal</string>
    <string name="log_out_txt">LOG-OUT</string>
    <string name="title_activity_maps">Map</string>
    <string name="ver_centros_de_donacion_txt">ver centros de donacion</string>
    <string name="administrador">Administrador</string>
    <string name="celular">Celular</string>
    <string name="verificar_email">verificar e-mail</string>
    <string name="anadir_marcador">Añadir Marcador</string>
    <string name="descripcion_txt">Descripcion</string>
    <string name="latitud_txt">Latitud</string>
    <string name="longitud_txt">Longitud</string>
    <string name="anadir">Añadir</string>
    <string name="lista">Lista</string>
    <string name="comedorlargo_txt">Incluya aqui una foto del documento de propiedad del comedor</string>
    <string name="subir">Subir</string>
    <string name="disclaimer">Si ya subio las fotos debe esperar a ser verficado</string>
    <string name="cedula_msg_txt">Incluya aqui una foto de su cedula</string>
    <string name="persona_msg_txt">Incluya aqui una foto suya sosteniendo su cedula</string>
    <string name="enviar">enviar</string>
    <string name="imagenes">Imagenes</string>
    <string name="buscar">buscar</string>
    <string name="verificar_usuario">verificar usuario</string>
    <string name="donaciones_pendientes">donaciones pendientes</string>
    <string name="actualizar_donaciones">actualizar donaciones</string>
    <string name="donaciones_recibidas">Donaciones Recibidas</string>
    <string name="mis_datos">mis datos</string>
    <string name="realizar_donacion">realizar donacion</string>
    <string name="mis_donaciones">mis donaciones</string>
    <string name="corrreo_de_quien_recibe">Correo de quien recibe</string>
    <string name="descripcion_de_la_donacion">Descripcion de la donación</string>
    <string name="actualizar_txt">actualizar</string>
    <string name="recibida">recibida</string>
    <string name="correo_origen_donacion">Correo origen donacion</string>
    <string name="descargar_txt">DESCARGAR</string>
</resources>
