<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registroB">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="130dp"
        android:text="@string/registro_para_beneficiarios_txt"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="505dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button"
        android:onClick="volverPrincipal"
        android:text="@string/volver_text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="81dp"
        android:ems="10"
        android:hint="@string/correo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido" />

    <EditText
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="81dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <EditText
        android:id="@+id/direccion"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="81dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/direcciond"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="81dp"
        android:ems="10"
        android:hint="@string/direccion_d"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direccion" />

    <EditText
        android:id="@+id/celular"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="81dp"
        android:ems="10"
        android:hint="@string/celular"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direcciond" />

    <Button
        android:id="@+id/botonRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="505dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/custom_button"
        android:text="@string/registrarse_txt"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:fontFamily="cursive"
        android:onClick="irLogin"
        android:text="@string/login_txt"
        android:textColor="#0000FF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/botonRB"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toEndOf="@+id/volver"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>