<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnadirMarcador">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="505dp"
        android:onClick="Volver"
        android:text="@string/volver_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="503dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="261dp"
                android:ems="10"
                android:hint="@string/descripcion_txt"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <EditText
                android:id="@+id/longitud_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/longitud_txt"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <EditText
                android:id="@+id/latitud_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/latitud_txt"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/anadirB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="505dp"
        android:text="@string/anadir"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />
</androidx.constraintlayout.widget.ConstraintLayout>