<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificadoFotos">

    <ImageView
        android:id="@+id/fotoPCedula"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/descripcion_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoCedula"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/fotoDocumento"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/descripcion_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/fotoCedula"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/descripcion_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoDocumento"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="550dp"
        android:background="@drawable/custom_button"
        android:onClick="logout"
        android:text="@string/log_out_txt"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/comedorlargo_txt"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/fotoDocumento"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fotoDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/subir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoDocumento" />

    <Button
        android:id="@+id/fotoCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/subir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoCedula" />

    <Button
        android:id="@+id/fotoPCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/subir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoPCedula" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="480dp"
        android:fontFamily="serif"
        android:text="@string/disclaimer"
        android:textColor="#FF0404"
        android:textColorHighlight="#FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="94dp"
        android:text="@string/cedula_msg_txt"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/fotoCedula"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="112dp"
        android:text="@string/persona_msg_txt"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/fotoPCedula"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/submitB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="550dp"
        android:background="@drawable/custom_button"
        android:text="@string/enviar"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>